--- a/page2.html
+++ b/page2.html
@@ -135,6 +135,8 @@
 
         <p>Читай дальше и я расскажу тебе как переписать каждую из них.</p>
 
+         <img src="https://i.ibb.co/JR8Y87S9/IMG-3568.jpg" alt="vibor" style="max-width: 100%; height: auto;">
+
         <div class="divider"></div>
 
         <h2>Программа #1 «Война» — борьба за власть и значимость ❌</h2>
@@ -196,6 +198,8 @@
         <p>Именно так реагируют женщины после расстановки:</p>
 
         <p><em>«Мне прямо были мурашки, мне было тяжело стоять даже. Эти программы хитрые. Они готовят нас к тому, что они нас будут кушать с детства. А теперь я это вижу!»</em></p>
+
+         <img src="https://i.ibb.co/Qjpjf1Bx/IMG-3569.jpg" alt="novoe" style="max-width: 100%; height: auto;">
 
         <p>За это отвечает <strong>точка сборки</strong> — состояние, в котором происходит перепрограммирование.</p>
 
@@ -434,10 +438,8 @@
         <p><strong>Если эта мысль возникла в твоей голове, то жми на кнопку ниже...</strong></p>
 
         <div class="button-container">
-            <a href="page3.html" class="cta-button">Присоединиться к пространству за 1950₽/мес</a>
+            <a href="page3.html" class="cta-button">Продолжить чтение →</a>
         </div>
-
-        <p style="text-align: center; color: #666;">Осталось 15 мест по специальной цене</p>
     </div>
 </body>
 </html>
