--- a/page3.html
+++ b/page3.html
@@ -289,6 +289,8 @@
 
         <h2>Что ты сможешь после участия в пространстве?</h2>
 
+         <img src="https://i.ibb.co/Pz4f0N46/IMG-3571.jpg" alt="happy" style="max-width: 100%; height: auto;">
+
         <p>Представь, что наконец-то ты ушла с войны.</p>
 
         <p>Ты больше не борешься за власть и значимость...</p>
