--- a/page3.html
+++ b/page3.html
@@ -361,7 +361,7 @@
         </div>
 
         <div class="button-container">
-            <a href="#" class="cta-button">Присоединиться сейчас</a>
+            <a href="https://t.me/tribute/app?startapp=sG7L" class="cta-button">Присоединиться сейчас</a>
         </div>
 
         <div class="divider"></div>
@@ -417,7 +417,7 @@
         </p>
 
         <div class="button-container">
-            <a href="#" class="cta-button" style="font-size: 20px; padding: 22px 50px;">Присоединиться к пространству</a>
+            <a href="https://t.me/tribute/app?startapp=sG7L" class="cta-button" style="font-size: 20px; padding: 22px 50px;">Присоединиться к пространству</a>
         </div>
 
         <p style="text-align: center; color: #666;">Осталось 15 мест • Скидка 92% только для первых 24 участниц</p>
@@ -467,7 +467,7 @@
         </p>
 
         <div class="button-container">
-            <a href="#" class="cta-button" style="font-size: 20px; padding: 22px 50px;">Присоединиться за 1950₽/мес</a>
+            <a href="https://t.me/tribute/app?startapp=sG7L" class="cta-button" style="font-size: 20px; padding: 22px 50px;">Присоединиться за 1950₽/мес</a>
         </div>
 
         <div class="divider"></div>
