--- a/page2.html
+++ b/page2.html
@@ -129,7 +129,7 @@
 
         <p><strong>1.</strong> Война (борьба за власть, значимость, правоту)</p>
 
-        <p><strong>2.</strong> Дефицит (постоянное ощущение нехватки)</p>
+        <p><strong>2.</strong> Дефицит (постоянное ощущение нехватки, "что со мной не так")</p>
 
         <p><strong>3.</strong> Эгоизм (<em>"а что мне здесь дадут?"</em>)</p>
 
@@ -143,13 +143,13 @@
 
         <p>Это самая разрушительная программа, потому что мы её даже не замечаем…</p>
 
-        <p><strong><u>Мы все на войне. Мы дети войны.</u> И если мы дети войны, то ничего, кроме как воевать, мы не умеем.</strong></p>
+        <p><strong><u>Мы дети войны. Наши родители воюют друг с другом, и у нас нет модели, как может быть по-другому. </strong></p>
 
-        <p>У всех у нас мамы воюют с папами и папы с мамами.</p>
+        <p>Неуважение, борьба за значимость — там нет места близости, любви и связи с Создателем.</p>
 
-        <p>И у нас нет модели, как может быть по-другому.</p>
+        <p>С детства нас готовят к этой войне. Воспитание внушает, что с нами что-то не так. Когда мы воюем — выбрасываем энергию через боль, страх и тревогу. Программы забирают нашу энергию.</p>
 
-        <p>Неуважение к друг другу, борьба за власть, борьба за значимость.</p>
+        <p>Посмотри на женщин в отношениях — они все делают одно и то же:</p>
 
         <p>И там нет места ни близости, ни любви, ни связи с Создателем.</p>
 
