--- a/page3.html
+++ b/page3.html
@@ -343,10 +343,10 @@
 
         <p style="text-align: center;">Это экономия <strong>23 050 рублей каждый месяц!</strong></p>
 
-        <div class="price-box" style="text-align: center; background: #fff8e1;">
+        <div class="price-box" style="text-align: center;">
             <p style="font-size: 24px; font-weight: 700; margin-bottom: 10px;">Полный доступ</p>
             <p style="text-decoration: line-through; color: #999; margin-bottom: 10px;">25 000 ₽/мес</p>
-            <p style="font-size: 42px; font-weight: 700; color: #d32f2f; margin: 20px 0;">1950 ₽/мес</p>
+            <p style="font-size: 42px; font-weight: 700; color: #007714; margin: 20px 0;">1950 ₽/мес</p>
             <p style="color: #666; margin-bottom: 30px;">подписка, отмена в любой момент</p>
             
             <div style="text-align: left;">
