--- a/page2.html
+++ b/page2.html
@@ -143,7 +143,7 @@
 
         <p>Это самая разрушительная программа, потому что мы её даже не замечаем…</p>
 
-        <p><strong><u>Мы дети войны. Наши родители воюют друг с другом, и у нас нет модели, как может быть по-другому. </strong></p>
+        <p><strong>Мы дети войны. Наши родители воюют друг с другом, и у нас нет модели, как может быть по-другому. </strong></p>
 
         <p>Неуважение, борьба за значимость — там нет места близости, любви и связи с Создателем.</p>
 
